fix categories page

--- a/_posts/Test/2023-12-27-test-post.md
+++ b/_posts/Test/2023-12-27-test-post.md
@@ -3,9 +3,9 @@ title:  "테스트용 글"
 excerpt: "블로그 글 테스트 용 글입니다."
 
 categories:
-  - Test
+  - test
 tags:
-  - [Test]
+  - [test]
 
 toc: true
 toc_sticky: true
