--- a/_posts/c-sharp/2023-12-28-queue.md
+++ b/_posts/c-sharp/2023-12-28-queue.md
@@ -20,10 +20,10 @@ last_modified_at: 2023-12-28
 - 큐[Queue] 의 맨 뒤에서 데이터를 계속 추가하고, 맨 앞에서만 데이터를 읽기 때문에 순차적으로 데이터를 처리하게 된다.
 
 ## Use Queue
-### Queue 생성하기
+#### Queue 생성하기
 - 컬랙션인 Queue를 사용하기 위해 <span style="color:#00adb5">`using System.Collections;`</span> 을 <span style="color:#00adb5">`using`</span> 문에 추가한다.
 
-- Queue 객체는 일반 객체를 생성하는 방법과 동일하며, var 타입도 가능하다.
+- Queue 객체는 일반 객체를 생성하는 방법과 동일하며, <span style="color:#00adb5">`var`</span> 타입도 가능하다.
 
 ```c#
     using System.Collections;
@@ -35,6 +35,37 @@ last_modified_at: 2023-12-28
 - Queue의 용량을 객체를 생성할 때 설정할 수 있다.
     - 만약 설정한 용량을 넘는다면 Queue의 용량이 자동으로 증가한다.
 
-### Queue 초기화
+#### Queue 초기화
 - Queue 생성자에 배열을 넘기면, 배열의 값으로 Queue의 값을 초기화한다.
 - Queue 생성자에 object 타입의 변수를 전달하면 Queue의 값을 전달받은 값으로 초기화한다.
+```c#
+  int[] arr = {1, 2, 3, 4};
+
+  Queue queue1 = new Queue(arr);
+  Queue queue2 = new Queue(new object[] {1, "hi", 5,5});
+```
+
+#### Enqueue : 값 추가
+```c#
+  Queue queue = new Queue();
+
+  queue.Enqueue(1); //Queue 맨 끝에 1 추가
+```
+- Queue의 맨 뒤에 받은 개체를 추가한다.
+
+#### Dequeue : 값 제거
+```c#
+  Queue queue = new Queue();
+
+  queue.Dequeue(); //Queue 맨 앞에있는 값 제거
+```
+- Queue의 맨 앞에서 개체를 제거하고 반환한다.
+
+#### Peek : 값 읽기
+```c#
+  Queue queue = new Queue();
+
+  queue.Peek()
+```
+- Queue의 맨 앞에서 개체를 반환한다.
+  - <span style="color:#00adb5">`Dequeue()`</span> 메서드와 달리 개체를 제거하지는 않는다.
