chagne post Queue

--- a/_posts/c-sharp/2023-12-28-queue.md
+++ b/_posts/c-sharp/2023-12-28-queue.md
@@ -10,62 +10,104 @@ toc: true
 toc_sticky: true
 
 date: 2023-12-28
-last_modified_at: 2023-12-28
+last_modified_at: 2024-01-02
 ---
 ## What Is Queue?
-> Queue란 무엇인가?
+  > Queue란 무엇인가?
 
-- 먼저 추가된 데이터가 먼저 출력 처리되는 FIFO [First In First Out] 자료 구조로서 입력된 순서대로 처리해야 하는 상황에 이용된다.   
+  - 먼저 추가된 데이터가 먼저 출력 처리되는 FIFO [First In First Out] 자료 구조로서 입력된 순서대로 처리해야 하는 상황에 이용된다.   
 
-- 큐[Queue] 의 맨 뒤에서 데이터를 계속 추가하고, 맨 앞에서만 데이터를 읽기 때문에 순차적으로 데이터를 처리하게 된다.
+  - 큐[Queue] 의 맨 뒤에서 데이터를 계속 추가하고, 맨 앞에서만 데이터를 읽기 때문에 순차적으로 데이터를 처리하게 된다.
 
-## Use Queue
+## Use Queue   
+
 #### Queue 생성하기
-- 컬랙션인 Queue를 사용하기 위해 <span style="color:#00adb5">`using System.Collections;`</span> 을 <span style="color:#00adb5">`using`</span> 문에 추가한다.
 
-- Queue 객체는 일반 객체를 생성하는 방법과 동일하며, <span style="color:#00adb5">`var`</span> 타입도 가능하다.
+  - 컬랙션인 Queue를 사용하기 위해 <span style="color:#00adb5">`using System.Collections;`</span> 을 <span style="color:#00adb5">`using`</span> 문에 추가한다.
 
-```c#
-    using System.Collections;
+  - Queue 객체는 일반 객체를 생성하는 방법과 동일하며, <span style="color:#00adb5">`var`</span> 타입도 가능하다.
 
-    Queue queue1 = new Queue();
-    var queue2 = new Queue();
-``` 
-
-- Queue의 용량을 객체를 생성할 때 설정할 수 있다.
+  - Queue의 용량을 객체를 생성할 때 설정할 수 있다.
     - 만약 설정한 용량을 넘는다면 Queue의 용량이 자동으로 증가한다.
-
-#### Queue 초기화
-- Queue 생성자에 배열을 넘기면, 배열의 값으로 Queue의 값을 초기화한다.
-- Queue 생성자에 object 타입의 변수를 전달하면 Queue의 값을 전달받은 값으로 초기화한다.
-```c#
+  <br>
+  <br>
+  ```c#
+  Queue queue = new Queue();
+  ```
+  - 비어있는 상태의 기본 용량인 Queue 객체를 생성한다.
+  <br>
+  <br>
+   ```c#
+  Queue queue = new Queue(5);
+  ```
+  - 비어있는 상태의 입력한 초기 용량을 가지는 Queue 객체를 생성한다.
+  <br>
+  <br>
+  ```c#
   int[] arr = {1, 2, 3, 4};
 
   Queue queue1 = new Queue(arr);
-  Queue queue2 = new Queue(new object[] {1, "hi", 5,5});
-```
+  Queue queue2 = new Queue(new object[]{1, "hi", 5.5});
+  ```
+  - Queue 생성자에 배열을 넘기면, 배열의 값으로 Queue의 값을 초기화한다.
 
-#### Enqueue : 값 추가
-```c#
+  - Queue 생성자에 object 타입의 변수를 전달하면 Queue의 값을 전달받은 값으로 초기화한다.
+
+#### Count
+  - Queue에 들어있는 요소의 수를 가저온다.
+<br>
+<br>
+#### Enqueue()
+  ```c#
   Queue queue = new Queue();
 
   queue.Enqueue(1); //Queue 맨 끝에 1 추가
-```
-- Queue의 맨 뒤에 받은 개체를 추가한다.
-
-#### Dequeue : 값 제거
-```c#
+  ```
+  - Queue의 맨 뒤에 받은 개체를 추가한다.
+<br>
+<br>
+#### Dequeue()
+  ```c#
   Queue queue = new Queue();
 
   queue.Dequeue(); //Queue 맨 앞에있는 값 제거
-```
-- Queue의 맨 앞에서 개체를 제거하고 반환한다.
-
-#### Peek : 값 읽기
-```c#
+  ```
+  - Queue의 맨 앞에서 개체를 제거하고 반환한다.
+<br>
+<br>
+#### Peek()
+  ```c#
   Queue queue = new Queue();
 
   queue.Peek()
-```
-- Queue의 맨 앞에서 개체를 반환한다.
-  - <span style="color:#00adb5">`Dequeue()`</span> 메서드와 달리 개체를 제거하지는 않는다.
+  ```
+  - Queue의 맨 앞에서 개체를 반환한다.
+    - <span style="color:#00adb5">`Dequeue()`</span> 메서드와 달리 개체를 제거하지는 않는다.
+<br>
+<br>
+#### Clear()
+  ```c#
+  queue.Clear(); //Queue 내에 모든 개체 제거
+  ```
+  - Queue에서 개체들을 모두 제거한다.
+<br>
+<br>
+#### Contains(n)
+  ```c#
+  queue.Contains(2); // true / false
+  ```
+  - Queue에 n이 있는지 여부를 확인한다.
+<br>
+<br>
+#### CopyTo(arr[], n)
+  ```c#
+
+  ```
+  - n인덱스부터 Queue의 요소를 arr에 복사한다.
+<br>
+<br>
+#### ToArray()
+  ```c#
+
+  ```
+  - Queue의 요소를 새 배열에 복사한다.
